Add Omobility V3 validator
Change-Id: I0660c7fb8cb6b27f39f083d016e39efd42d1f8d2